SUBDIRS = API @ClanLib_Modules@

DIST_SUBDIRS = \
  API            \
  App            \
  Core           \
  Database       \
  Display        \
  GL             \
  GUI            \
  GDI            \
  MikMod         \
  Network        \
  RegExp         \
  Sound          \
  Sqlite         \
  Vorbis

# EOF #
