SUBDIRS = API @ClanLib_Modules@

DIST_SUBDIRS = \
  API            \
  App            \
  Core           \
  Database       \
  Display        \
  GL             \
  GL1            \
  GUI            \
  CSSLayout      \
  SWRender       \
  MikMod         \
  Network        \
  RegExp         \
  Sound          \
  Sqlite         \
  Vorbis

# EOF #
