pkgdatadir  = $(datadir)/doc/@PACKAGE@-@LT_RELEASE@/Tutorial
htmldir = $(datadir)/doc/@PACKAGE@-@LT_RELEASE@/Tutorial/

nobase_dist_html_DATA = \
TicTacToe/clanlib-tutorial-part2.zip \
TicTacToe/clanlib-tutorial-part3.zip \
TicTacToe/clanlib-tutorial-workspace.zip \
TicTacToe/figure1.png \
TicTacToe/figure2.png \
TicTacToe/figure3.png \
TicTacToe/figure8.png \
TicTacToe/figure9.png \
TicTacToe/figure10.png \
TicTacToe/figure_board.png \
TicTacToe/figure_circle.png \
TicTacToe/figure_cross.png \
TicTacToe/figure_menu.png \
TicTacToe/index.html \
TicTacToe/part-1.html \
TicTacToe/part-2.html \
TicTacToe/part-3.html \
TicTacToe/tictactoe.zip \
index.html

# EOF #
